{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 358,
  "lineage": "e8cb43da-35c5-345c-ec8a-fb3671b46ba8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lb_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bc4b706878f89bf",
            "arn": "arn:aws:ec2:us-east-1:682574356252:instance/i-032c088e4e1d9b210",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032c088e4e1d9b210",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "standard",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bfd8726bd536e7bd",
            "private_dns": "ip-10-10-0-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.27",
            "public_ip": "35.174.154.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f250cee47ade4dc7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b1416b6e927eda7a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0085a1da7ad2ae82f",
            "tags": {
              "Name": "lb_instance_1"
            },
            "tags_all": {
              "Name": "lb_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1416b6e927eda7a"
            ]
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bc4b706878f89bf",
            "arn": "arn:aws:ec2:us-east-1:682574356252:instance/i-0348fa577a627d02f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0348fa577a627d02f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "standard",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06d40bf71c6a38957",
            "private_dns": "ip-10-10-1-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.241",
            "public_ip": "54.205.241.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e543ec6cf184631",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b1416b6e927eda7a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1e5159ede32c4bb",
            "tags": {
              "Name": "lb_instance_2"
            },
            "tags_all": {
              "Name": "lb_instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1416b6e927eda7a"
            ]
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:internet-gateway/igw-06b80a99306e12291",
            "id": "igw-06b80a99306e12291",
            "owner_id": "682574356252",
            "tags": {
              "Name": "Load_balancer_IGW"
            },
            "tags_all": {
              "Name": "Load_balancer_IGW"
            },
            "vpc_id": "vpc-06370c978e6505ea1"
          },
          "dependencies": [
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:loadbalancer/app/tf-lb-20221205041055162000000003/9404021301ac8224",
            "arn_suffix": "app/tf-lb-20221205041055162000000003/9404021301ac8224",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20221205041055162000000003-1032087019.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:loadbalancer/app/tf-lb-20221205041055162000000003/9404021301ac8224",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20221205041055162000000003",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b1416b6e927eda7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0085a1da7ad2ae82f"
              },
              {
                "subnet_id": "subnet-0f1e5159ede32c4bb"
              }
            ],
            "subnets": [
              "subnet-0085a1da7ad2ae82f",
              "subnet-0f1e5159ede32c4bb"
            ],
            "tags": {
              "Name": "Application_Load_Balancer"
            },
            "tags_all": {
              "Name": "Application_Load_Balancer"
            },
            "vpc_id": "vpc-06370c978e6505ea1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_lb_target_group.lb_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:listener/app/tf-lb-20221205041055162000000003/9404021301ac8224/9dc223356784518c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:listener/app/tf-lb-20221205041055162000000003/9404021301ac8224/9dc223356784518c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:loadbalancer/app/tf-lb-20221205041055162000000003/9404021301ac8224",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "Listener-1"
            },
            "tags_all": {
              "Name": "Listener-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_tf",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3",
            "arn_suffix": "targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20221205041049729000000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Load_balancer_Target_Group"
            },
            "tags_all": {
              "Name": "Load_balancer_Target_Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06370c978e6505ea1"
          },
          "dependencies": [
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3-20221205041130453800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3",
            "target_id": "i-032c088e4e1d9b210"
          },
          "dependencies": [
            "aws_instance.lb_instances",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3-20221205041130754400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:682574356252:targetgroup/tf-20221205041049729000000001/d7c42c3ab63d8cb3",
            "target_id": "i-0348fa577a627d02f"
          },
          "dependencies": [
            "aws_instance.lb_instances",
            "aws_lb_target_group.lb_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "lb_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06b80a99306e12291",
            "id": "r-rtb-08355d8d9e8a767ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08355d8d9e8a767ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lb_igw",
            "aws_route_table.lb_rt",
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:route-table/rtb-08355d8d9e8a767ff",
            "id": "rtb-08355d8d9e8a767ff",
            "owner_id": "682574356252",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Load_balancer_Route_table"
            },
            "tags_all": {
              "Name": "Load_balancer_Route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06370c978e6505ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6dec64cc405750f",
            "route_table_id": "rtb-08355d8d9e8a767ff",
            "subnet_id": "subnet-0085a1da7ad2ae82f"
          },
          "dependencies": [
            "aws_route_table.lb_rt",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0817ad3152da0d11d",
            "route_table_id": "rtb-08355d8d9e8a767ff",
            "subnet_id": "subnet-0f1e5159ede32c4bb"
          },
          "dependencies": [
            "aws_route_table.lb_rt",
            "aws_subnet.lb_subnets",
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:security-group/sg-0b1416b6e927eda7a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1416b6e927eda7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221205041049730500000002",
            "name_prefix": "terraform-",
            "owner_id": "682574356252",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load_balancer_Security_Group"
            },
            "tags_all": {
              "Name": "Load_balancer_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06370c978e6505ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:subnet/subnet-0085a1da7ad2ae82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0085a1da7ad2ae82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682574356252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lb_subnet_1"
            },
            "tags_all": {
              "Name": "lb_subnet_1"
            },
            "vpc_id": "vpc-06370c978e6505ea1"
          },
          "dependencies": [
            "aws_vpc.lb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:subnet/subnet-0f1e5159ede32c4bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e5159ede32c4bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682574356252",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lb_subnet_2"
            },
            "tags_all": {
              "Name": "lb_subnet_2"
            },
            "vpc_id": "vpc-06370c978e6505ea1"
          },
          "dependencies": [
            "aws_vpc.lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682574356252:vpc/vpc-06370c978e6505ea1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d38354d03ddbd7b7",
            "default_route_table_id": "rtb-0bcd57c1d22cb65b3",
            "default_security_group_id": "sg-0feb769dabae4a840",
            "dhcp_options_id": "dopt-08dbba81d20f71ba8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06370c978e6505ea1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcd57c1d22cb65b3",
            "owner_id": "682574356252",
            "tags": {
              "Name": "Load_balancer_Vpc"
            },
            "tags_all": {
              "Name": "Load_balancer_Vpc"
            }
          }
        }
      ]
    }
  ]
}